# docs/swagger.json
@@ -18,6 +18,150 @@
     "host": "127.0.0.1:9000",
     "basePath": "/",
     "paths": {
+        "/api/v1/auth-token/": {
+            "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    },
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "获取当前用户的token，需要通过身份认证权限",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth token"
+                ],
+                "summary": "获取当前用户的token",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/controllers.TokenJSON"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/controllers.BaseJSON"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/controllers.BaseJSON"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    },
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "刷新当前用户的token，旧token失效，需要通过身份认证权限",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth token"
+                ],
+                "summary": "刷新当前用户的token，旧token失效",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/controllers.TokenJSON"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/controllers.BaseJSON"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/controllers.BaseJSON"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "身份验证并返回一个token\n令牌应包含在AuthorizationHTTP标头中。密钥应以字符串文字“Token”为前缀，空格分隔两个字符串。\n例如Authorization: Token 9944b09199c62bcf9418ad846dd0e4bbdfc6ee4b；\n此外，可选query参数,“new”，?new=true用于刷新生成一个新token；",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth token"
+                ],
+                "summary": "身份验证并返回一个token",
+                "parameters": [
+                    {
+                        "type": "boolean",
+                        "description": "new token",
+                        "name": "new",
+                        "in": "query"
+                    },
+                    {
+                        "description": "auth data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/controllers.TokenLoginForm"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/controllers.TokenJSON"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/controllers.BaseJSON"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/controllers.BaseJSON"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/buckets/": {
             "get": {
                 "security": [
@@ -1689,6 +1833,32 @@
                 }
             }
         },
+        "controllers.TokenJSON": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "code_text": {
+                    "type": "string"
+                },
+                "token": {
+                    "type": "object",
+                    "$ref": "#/definitions/models.Token"
+                }
+            }
+        },
+        "controllers.TokenLoginForm": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "controllers.UserDetailJSON": {
             "type": "object",
             "properties": {
@@ -1968,6 +2138,22 @@
                     "description": "修改时间",
                     "type": "object",
                     "$ref": "#/definitions/models.TypeJSONTime"
+                }
+            }
+        },
+        "models.Token": {
+            "type": "object",
+            "properties": {
+                "created_time": {
+                    "type": "object",
+                    "$ref": "#/definitions/models.TypeJSONTime"
+                },
+                "key": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "description": "所属用户id",
+                    "type": "integer"
                 }
             }
         },
